--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Maior_e_Menor_Elemento_de_um_Array C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(Maior_e_Menor_Elemento_de_um_Array main.c numOps.c numOps.h)
+add_executable(Maior_e_Menor_Elemento_de_um_Array main.c numOps.c numOps.h copyArray.c copyArray.h)
