--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Maior_e_Menor_Elemento_de_um_Array C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(Maior_e_Menor_Elemento_de_um_Array main.c numOps.c numOps.h copyArray.c copyArray.h createArray.c createArray.h minMax1.c minMax1.h printArray.c printArray.h)
+add_executable(Maior_e_Menor_Elemento_de_um_Array main.c numOps.c numOps.h copyArray.c copyArray.h createArray.c createArray.h minMax1.c minMax1.h printArray.c printArray.h minMax2.c minMax2.h minMax3.c minMax3.h)
